@@ -2,6 +2,7 @@
 - API Addition: Input allows getting the maximum number of pointers supported by the backend
 - API Addition: Configuration option added to allow setting a max number of threads to use for net requests
 - API Change: NetJavaImpl now uses a cached thread pool to allow concurrent requests (by default, the thread pool is unbounded - use maxNetThreads in backend configurations to set a limit - set to 1 for previous behavior)
+- API Addition: New MathUtils norm and map methods
 
 [1.9.9]
 - API Addition: Add support for stripping whitespace in PixmapPacker
